--- a/index.html
+++ b/index.html
@@ -1,111 +1,255 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAVAGE - WoW Guild</title>
-    <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            color: #fff;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            position: relative;
-            background-color: #000;
-            min-height: 100vh;
-            overflow-y: auto;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SAVAGE - WoW Guild</title>
+  <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      overflow: hidden;
+      font-family: 'Rajdhani', sans-serif;
+      height: 100vh;
+      position: relative;
+    }
 
-        .logo {
-            width: 300px;
-            height: auto;
-            margin-top: 20px;
-            border-radius: 15px;
-            box-shadow: 0 0 20px 10px rgba(0, 0, 0, 0.7);
-        }
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
 
-        h1 {
-            font-size: 3em;
-            margin-top: 10px;
-            text-shadow: 0 0 10px rgba(255, 125, 0, 0.8);
-        }
+    .logo {
+      width: 400px;
+      height: auto;
+      opacity: 0;
+      animation: fadeInCenter 2.5s ease-out forwards;
+      filter: drop-shadow(0 0 30px #ff6600);
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      cursor: pointer;
+    }
 
-        p {
-            font-size: 1.2em;
-            margin: 20px auto;
-            width: 80%;
-        }
+    @keyframes fadeInCenter {
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.8);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+      }
+    }
 
-        .buttons a {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #a0522d;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 10px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            transition: background 0.3s ease, box-shadow 0.3s ease;
-        }
+    .menu-circle {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 3;
+      pointer-events: none;
+      display: none;
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
 
-        .buttons a img {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
-        }
+    .menu-item {
+      position: absolute;
+      width: 180px;
+      padding: 12px 16px;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 14px;
+      color: #ffe8c3;
+      background: linear-gradient(145deg, #2c1b00, #1a0d00);
+      border: 1px solid #ff8000;
+      box-shadow: 0 0 25px rgba(255, 140, 0, 0.4), inset 0 0 10px rgba(255, 80, 0, 0.4);
+      transition: all 0.4s ease;
+      opacity: 0;
+      pointer-events: auto;
+      font-weight: bold;
+      transform: scale(0.5);
+    }
 
-        .buttons a:hover {
-            background-color: #8b4513;
-            box-shadow: 0 0 15px rgba(255, 125, 0, 0.8);
-        }
-
-        .section {
-            margin: 40px auto;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.8);
-            width: 80%;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255, 125, 0, 0.5);
-        }
-
-        h2 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-shadow: 0 0 10px rgba(255, 125, 0, 0.8);
-        }
-    </style>
+    .menu-item:hover {
+      background: linear-gradient(145deg, #ff8000, #ff6600);
+      color: #fff;
+      opacity: 1;
+      transform: scale(1.1);
+      box-shadow: 0 0 35px #ff6600, inset 0 0 20px #ff9933;
+    }
+  </style>
 </head>
 <body>
-    <a href="https://ibb.co/3m92Gr5v" target="_blank">
-        <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo">
+  <div id="particles-js"></div>
+  <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo">
+
+  <div class="menu-circle">
+    <a href="https://discord.gg/7jfYRR2qxc" target="_blank" class="menu-item menu-discord" style="top: calc(50% - 250px); left: 50%; transform: translate(-50%, -50%) scale(0.5);">
+      <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord Icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px;">Discord
     </a>
-    <h1>🗡️ ¡Bienvenidos a SAVAGE! 🐺</h1>
-    <p>Guild enfocada en contenido PvE y PvP de <strong>World of Warcraft Retail</strong>, en el reino Drakkari (US). Progresamos con garra, sin toxicidad y en manada.</p>
+    <a href="https://guildsofwow.com/savagealliance/recruitment" target="_blank" class="menu-item menu-aplicar" style="top: 50%; left: calc(50% + 300px); transform: translate(-50%, -50%) scale(0.5);">Aplicar</a>
+    <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank" class="menu-item menu-guild" style="top: calc(50% + 250px); left: 50%; transform: translate(-50%, -50%) scale(0.5);">
+      <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Savage Icon" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 8px; border-radius: 50%;">Ver Guild
+    </a>
+    <a href="#" class="menu-item menu-estadisticas" style="top: 50%; left: calc(50% - 300px); transform: translate(-50%, -50%) scale(0.5);" onclick="document.getElementById('quienes-somos').style.display='block'; document.getElementById('quienes-somos').style.opacity='1'; return false;">Reglas</a>
+  </div>
 
-    <div class="buttons" style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap; position: relative;">
-        <a href="https://discord.gg/7jfYRR2qxc" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968756.png" alt="Discord">Unite al Discord
-        </a>
-        <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank">
-            <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Guild Icon" style="border-radius: 50%;">Ver Guild
-        </a>
-        <a href="https://guildsofwow.com/savagealliance/recruitment" target="_blank">
-            Aplicar a la Guild
-        </a>
-        <a href="https://guildsofwow.com/savagealliance/guild-report" target="_blank">
-            Ver Estadísticas de Guild
-       
-        </a>
-    </div>
+  <div id="quienes-somos" style="display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); width: 90%; max-width: 800px; max-height: 70vh; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.9); border: 1px solid #ff8000; border-radius: 15px; color: #ffe8c3; font-size: 1.1em; z-index: 9999; box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);">
+    <button onclick="document.getElementById('quienes-somos').style.display='none';" style="position: absolute; top: 10px; right: 10px; background: #ff4400; border: none; color: white; padding: 4px 10px; border-radius: 5px; cursor: pointer; font-weight: bold;">✖</button>
+    <h2 style="text-align: center; color: #ff9933;">¿Quiénes Somos?</h2>
+    <p>Somos <strong>SAVAGE</strong>, una hermandad con espíritu salvaje y compañerismo real. Buscamos jugadores comprometidos con ganas de mejorar y progresar en equipo. Nos mueve la <strong>lealtad, el respeto</strong> y la <strong>pasión por el juego</strong>.</p>
+    <h3 style="margin-top: 20px; color: #ff9933;">🛡️ Reglas Generales de Loot y Raid – Savage</h3>
+    <ul style="list-style: none; padding: 0;">
+      <li><strong>🔥 Reglas de participación:</strong>
+        <ul>
+          <li>Solo se permite obtener 1 ítem por boss.</li>
+          <li>El loot no se guarda ni se negocia. Lo que no se rolea en el momento, se pierde.</li>
+          <li>El personaje de raid se define la primera semana y no podrá cambiarse hasta la siguiente season.</li>
+          <li>Encantamientos obligatorios en Heroico/Mítico. Sin ellos, no se puede participar.</li>
+          <li>Penalización de -50% en tiradas si no está todo encantado, incluso en Normal.</li>
+          <li>Discusiones solo fuera del horario de raid con RL y oficiales.</li>
+        </ul>
+      </li>
+      <li><strong>💎 Sistema de Loot:</strong>
+        <ul>
+          <li>Loot entregado manualmente por loot council (3 personas: anunciante, verificador de BiS/Main, y analista de equipo).</li>
+          <li>Ítems raros se rolean entre los BiS, con prioridad establecida.</li>
+          <li>Tiradas reducidas un -50% para nuevos miembros por 2 semanas.</li>
+          <li>El consejo determina si se rolea como BiS o Main.</li>
+        </ul>
+      </li>
+      <li><strong>🧩 Prioridad especial para Tier Sets:</strong>
+        <ul>
+          <li>Se prioriza a quienes tengan 1 pieza (para formar 2) o 3 piezas (para formar 4).</li>
+        </ul>
+      </li>
+      <li><strong>📘 Definiciones importantes:</strong>
+        <ul>
+          <li><strong>🔷 BiS:</strong> Best in Slot – objeto óptimo con ambas estadísticas ideales.</li>
+          <li><strong>🔶 Main:</strong> objeto útil con al menos una estadística principal.</li>
+        </ul>
+      </li>
+      <li><strong>⚔️ Jerarquía de prioridades:</strong>
+        <ul>
+          <li>BiS > Main > ilvl Upgrade > Off Spec > Transfiguración</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 
-    <div class="section">
-        <h2>🔥 ¿Quiénes Somos?</h2>
-        <p>Somos <strong>SAVAGE</strong>, una hermandad con espíritu salvaje y compañerismo real. Buscamos jugadores comprometidos con ganas de mejorar y progresar en equipo.</p>
-        <p>Nos mueve la <strong>lealtad, respeto y la pasión por el juego</strong>. Si compartís esos valores, ¡estás en el lugar correcto!</p>
-    </div>
+  <script>
+    const menu = document.querySelector('.menu-circle');
+
+    function showMenu() {
+      const flash = document.createElement('div');
+      flash.style.position = 'absolute';
+      flash.style.top = '0';
+      flash.style.left = '0';
+      flash.style.width = '100%';
+      flash.style.height = '100%';
+      flash.style.zIndex = '5';
+      flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
+      flash.style.opacity = '0';
+      flash.style.transition = 'opacity 0.4s ease';
+      document.body.appendChild(flash);
+      setTimeout(() => {
+        flash.style.opacity = '1';
+        setTimeout(() => {
+          flash.style.opacity = '0';
+          setTimeout(() => document.body.removeChild(flash), 400);
+        }, 300);
+      }, 10);
+      menu.style.display = 'block';
+      setTimeout(() => menu.style.opacity = '1', 50);
+      const items = document.querySelectorAll('.menu-item');
+      items.forEach((item, index) => {
+        setTimeout(() => {
+          item.style.opacity = '1';
+          item.style.transform = item.style.transform.replace('scale(0.5)', 'scale(1)');
+        }, 300 * index);
+      });
+    }
+
+    const logo = document.querySelector('.logo');
+    logo.addEventListener('click', showMenu);
+
+    setTimeout(() => {
+      if (getComputedStyle(menu).display === 'none' || getComputedStyle(menu).opacity === '0') {
+        showMenu();
+      }
+    }, 6000);
+
+    tsParticles.load("particles-js", {
+      particles: {
+        number: { value: 25 },
+        color: { value: "#ffaa00" },
+        shape: {
+          type: "char",
+          character: {
+            value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
+            font: "Verdana",
+            style: "",
+            weight: "400",
+            fill: true
+          }
+        },
+        size: {
+          value: 10,
+          random: true
+        },
+        opacity: {
+          value: 0.4
+        },
+        move: {
+          enable: true,
+          speed: 0.8,
+          direction: "top",
+          outModes: "out"
+        },
+        rotate: {
+          value: { min: 0, max: 360 },
+          animation: {
+            enable: true,
+            speed: 3,
+            sync: false
+          }
+        }
+      },
+      interactivity: {
+        events: {
+          onHover: {
+            enable: true,
+            mode: "trail"
+          },
+          onClick: {
+            enable: false
+          }
+        },
+        modes: {
+          trail: {
+            delay: 0.2,
+            quantity: 1,
+            particles: {
+              color: { value: "#ffaa00" },
+              size: { value: 12 },
+              move: { speed: 0.5 },
+              opacity: { value: 0.6 }
+            }
+          }
+        }
+      },
+      background: { color: "#000" }
+    });
+  </script>
 </body>
 </html>
