--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Ver Guild" class="savage-icon">
     </a>
     <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;" class="savage-link" style="top: 50%; left: calc(50% - 340px); transform: translate(-50%, -50%); animation-delay: 0.8s;">
-      <img src="https://i.ibb.co/kVpvn1vW/Reglas.png" alt="Reglas" class="savage-icon">
+      <img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" class="savage-icon">
     </a>
   </div>
 
