--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SAVAGE - WoW Guild</title>
-  <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png" />
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet" />
+  <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png">
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
   <style>
     body {
@@ -40,8 +40,14 @@
     }
 
     @keyframes fadeInCenter {
-      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
-      100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+      0% {
+        opacity: 0;
+        transform: translate(-50%, -50%) scale(0.8);
+      }
+      100% {
+        opacity: 1;
+        transform: translate(-50%, -50%) scale(1);
+      }
     }
 
     .menu-circle {
@@ -79,70 +85,14 @@
       0% { opacity: 0; transform: scale(0.8); }
       100% { opacity: 1; transform: scale(1); }
     }
-
-    .menu-mobile {
-      display: none;
-    }
-
-    .savage-icon-mobile {
-      width: 64px;
-      filter: drop-shadow(0 0 6px #ff6600);
-      transition: transform 0.3s ease, filter 0.3s ease;
-    }
-
-    .savage-icon-mobile:hover {
-      transform: scale(1.1) rotate(-2deg);
-      filter: drop-shadow(0 0 12px #ffaa00);
-    }
-
-    #quienes-somos {
-      display: none;
-      position: fixed;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      max-width: 800px;
-      max-height: 70vh;
-      overflow-y: auto;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.9);
-      border: 1px solid #ff8000;
-      border-radius: 15px;
-      color: #ffe8c3;
-      font-size: 1.1em;
-      z-index: 9999;
-      box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);
-    }
-
-    @media (max-width: 768px) {
-      .menu-circle {
-        display: none !important;
-      }
-
-      .menu-mobile {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-gap: 20px;
-        position: absolute;
-        top: 65%;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 5;
-      }
-
-      .logo {
-        width: 80vw;
-      }
-    }
   </style>
 </head>
 <body>
   <audio id="tribalSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_81640b1d2b.mp3?filename=magic-fire-whoosh-116426.mp3"></audio>
+
   <div id="particles-js"></div>
   <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo">
 
-  <!-- Menú de Escritorio -->
   <div class="menu-circle" id="menu-circle">
     <a href="https://discord.gg/7jfYRR2qxc" target="_blank" class="savage-link" style="top: calc(50% - 300px); left: calc(50% - 90px); transform: translate(-50%, -50%); animation-delay: 0.2s;">
       <img src="https://i.ibb.co/7JWMHmTV/Discord.png" alt="Discord" class="savage-icon">
@@ -158,122 +108,164 @@
     </a>
   </div>
 
-  <!-- Menú Móvil -->
-  <div class="menu-mobile" id="menu-mobile">
-    <a href="https://discord.gg/7jfYRR2qxc" target="_blank"><img src="https://i.ibb.co/7JWMHmTV/Discord.png" class="savage-icon-mobile"></a>
-    <a href="https://guildsofwow.com/savagealliance/recruitment" target="_blank"><img src="https://i.ibb.co/VkJZkb4/Aplicar.png" class="savage-icon-mobile"></a>
-    <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank"><img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" class="savage-icon-mobile"></a>
-    <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;"><img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" class="savage-icon-mobile"></a>
-  </div>
-
-  <div id="quienes-somos">
+  <div id="quienes-somos" style="display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); width: 90%; max-width: 800px; max-height: 70vh; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.9); border: 1px solid #ff8000; border-radius: 15px; color: #ffe8c3; font-size: 1.1em; z-index: 9999; box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);">
     <button onclick="document.getElementById('quienes-somos').style.display='none';" style="position: absolute; top: 10px; right: 10px; background: #ff4400; border: none; color: white; padding: 4px 10px; border-radius: 5px; cursor: pointer; font-weight: bold;">✖</button>
     <h2 style="text-align: center; color: #ff9933;">¿Quiénes Somos?</h2>
-    <p>Somos <strong>SAVAGE</strong>, una hermandad con espíritu salvaje y compañerismo real...</p>
+    <p>Somos <strong>SAVAGE</strong>, una hermandad con espíritu salvaje y compañerismo real. Buscamos jugadores comprometidos con ganas de mejorar y progresar en equipo. Nos mueve la <strong>lealtad, el respeto</strong> y la <strong>pasión por el juego</strong>.</p>
+    <h3 style="margin-top: 20px; color: #ff9933;">🛡️ Reglas Generales de Loot y Raid – Savage</h3>
+    <ul style="list-style: none; padding: 0;">
+      <li><strong>🔥 Reglas de participación:</strong>
+        <ul>
+          <li>Solo se permite obtener 1 ítem por boss.</li>
+          <li>El loot no se guarda ni se negocia. Lo que no se rolea en el momento, se pierde.</li>
+          <li>El personaje de raid se define la primera semana y no podrá cambiarse hasta la siguiente season.</li>
+          <li>Encantamientos obligatorios en Heroico/Mítico. Sin ellos, no se puede participar.</li>
+          <li>Penalización de -50% en tiradas si no está todo encantado, incluso en Normal.</li>
+          <li>Discusiones solo fuera del horario de raid con RL y oficiales.</li>
+        </ul>
+      </li>
+      <li><strong>💎 Sistema de Loot:</strong>
+        <ul>
+          <li>Loot entregado manualmente por loot council (3 personas: anunciante, verificador de BiS/Main, y analista de equipo).</li>
+          <li>Ítems raros se rolean entre los BiS, con prioridad establecida.</li>
+          <li>Tiradas reducidas un -50% para nuevos miembros por 2 semanas.</li>
+          <li>El consejo determina si se rolea como BiS o Main.</li>
+        </ul>
+      </li>
+      <li><strong>🧩 Prioridad especial para Tier Sets:</strong>
+        <ul>
+          <li>Se prioriza a quienes tengan 1 pieza (para formar 2) o 3 piezas (para formar 4).</li>
+        </ul>
+      </li>
+      <li><strong>📘 Definiciones importantes:</strong>
+        <ul>
+          <li><strong>🔷 BiS:</strong> Best in Slot – objeto óptimo con ambas estadísticas ideales.</li>
+          <li><strong>🔶 Main:</strong> objeto útil con al menos una estadística principal.</li>
+        </ul>
+      </li>
+      <li><strong>⚔️ Jerarquía de prioridades:</strong>
+        <ul>
+          <li>BiS > Main > ilvl Upgrade > Off Spec > Transfiguración</li>
+        </ul>
+      </li>
+    </ul>
   </div>
+<script>
+  const menu = document.getElementById('menu-circle');
 
-  <script>
-    const menu = document.getElementById('menu-circle');
-    function showMenu() {
-      if (!menu) return;
-      const flash = document.createElement('div');
-      flash.style.position = 'absolute';
-      flash.style.top = '0';
-      flash.style.left = '0';
-      flash.style.width = '100%';
-      flash.style.height = '100%';
-      flash.style.zIndex = '5';
-      flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
-      flash.style.opacity = '0';
-      flash.style.transition = 'opacity 0.4s ease';
-      document.body.appendChild(flash);
-      setTimeout(() => {
-        flash.style.opacity = '1';
-        setTimeout(() => {
-          flash.style.opacity = '0';
-          setTimeout(() => document.body.removeChild(flash), 400);
-        }, 300);
-      }, 10);
-      menu.style.display = 'block';
-      setTimeout(() => {
-        menu.style.opacity = '1';
-        document.querySelectorAll('.savage-link').forEach(el => {
-          el.style.animationPlayState = 'running';
-        });
-      }, 50);
-    }
+  function showMenu() {
+    if (!menu) return;
 
-    document.querySelectorAll('.savage-icon').forEach(icon => {
-      icon.addEventListener('mouseenter', () => {
-        const sound = document.getElementById('tribalSound');
-        if (sound) {
-          sound.currentTime = 0;
-          sound.play();
-        }
-      });
-    });
-
-    const logo = document.querySelector('.logo');
-    if (logo) logo.addEventListener('click', showMenu);
+    const flash = document.createElement('div');
+    flash.style.position = 'absolute';
+    flash.style.top = '0';
+    flash.style.left = '0';
+    flash.style.width = '100%';
+    flash.style.height = '100%';
+    flash.style.zIndex = '5';
+    flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
+    flash.style.opacity = '0';
+    flash.style.transition = 'opacity 0.4s ease';
+    document.body.appendChild(flash);
 
     setTimeout(() => {
-      if (menu && (getComputedStyle(menu).display === 'none' || getComputedStyle(menu).opacity === '0')) {
-        showMenu();
-      }
-    }, 6000);
+      flash.style.opacity = '1';
+      setTimeout(() => {
+        flash.style.opacity = '0';
+        setTimeout(() => document.body.removeChild(flash), 400);
+      }, 300);
+    }, 10);
 
-    tsParticles.load("particles-js", {
-      particles: {
-        number: { value: 25 },
-        color: { value: "#ffaa00" },
-        shape: {
-          type: "char",
-          character: {
-            value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
-            font: "Verdana",
-            style: "",
-            weight: "400",
-            fill: true
-          }
-        },
-        size: { value: 10, random: true },
-        opacity: { value: 0.4 },
-        move: {
-          enable: true,
-          speed: 0.8,
-          direction: "top",
-          outModes: "out"
-        },
-        rotate: {
-          value: { min: 0, max: 360 },
-          animation: {
-            enable: true,
-            speed: 3,
-            sync: false
-          }
-        }
-      },
-      interactivity: {
-        events: {
-          onHover: { enable: true, mode: "trail" },
-          onClick: { enable: false }
-        },
-        modes: {
-          trail: {
-            delay: 0.2,
-            quantity: 1,
-            particles: {
-              color: { value: "#ffaa00" },
-              size: { value: 12 },
-              move: { speed: 0.5 },
-              opacity: { value: 0.6 }
-            }
-          }
-        }
-      },
-      background: { color: "#000" }
+    menu.style.display = 'block';
+    setTimeout(() => {
+      menu.style.opacity = '1';
+      document.querySelectorAll('.savage-link').forEach(el => {
+        el.style.animationPlayState = 'running';
+      });
+    }, 50);
+  }
+
+  document.querySelectorAll('.savage-icon').forEach(icon => {
+    icon.addEventListener('mouseenter', () => {
+      const sound = document.getElementById('tribalSound');
+      if (sound) {
+        sound.currentTime = 0;
+        sound.play();
+      }
     });
-  </script>
+  });
+
+  const logo = document.querySelector('.logo');
+  if (logo) logo.addEventListener('click', showMenu);
+
+  setTimeout(() => {
+    if (menu && (getComputedStyle(menu).display === 'none' || getComputedStyle(menu).opacity === '0')) {
+      showMenu();
+    }
+  }, 6000);
+
+  tsParticles.load("particles-js", {
+    particles: {
+      number: { value: 25 },
+      color: { value: "#ffaa00" },
+      shape: {
+        type: "char",
+        character: {
+          value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
+          font: "Verdana",
+          style: "",
+          weight: "400",
+          fill: true
+        }
+      },
+      size: {
+        value: 10,
+        random: true
+      },
+      opacity: {
+        value: 0.4
+      },
+      move: {
+        enable: true,
+        speed: 0.8,
+        direction: "top",
+        outModes: "out"
+      },
+      rotate: {
+        value: { min: 0, max: 360 },
+        animation: {
+          enable: true,
+          speed: 3,
+          sync: false
+        }
+      }
+    },
+    interactivity: {
+      events: {
+        onHover: {
+          enable: true,
+          mode: "trail"
+        },
+        onClick: {
+          enable: false
+        }
+      },
+      modes: {
+        trail: {
+          delay: 0.2,
+          quantity: 1,
+          particles: {
+            color: { value: "#ffaa00" },
+            size: { value: 12 },
+            move: { speed: 0.5 },
+            opacity: { value: 0.6 }
+          }
+        }
+      }
+    },
+    background: { color: "#000" }
+  });
+</script>
 </body>
 </html>
 
