--- a/index.html
+++ b/index.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SAVAGE - WoW Guild</title>
-  <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png">
-  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+  <link rel="icon" href="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" type="image/png" />
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
   <style>
-    body {
+    * { box-sizing: border-box; }
+    html, body {
       margin: 0;
       padding: 0;
       background: #000;
       overflow: hidden;
       font-family: 'Rajdhani', sans-serif;
-      height: 100vh;
+      height: 100%;
+      width: 100%;
+    }
+    body {
       position: relative;
     }
-
     #particles-js {
       position: absolute;
       width: 100%;
       height: 100%;
       z-index: -1;
     }
-
     .logo {
       width: 400px;
+      max-width: 80vw;
       height: auto;
       opacity: 0;
       animation: fadeInCenter 2.5s ease-out forwards;
       filter: drop-shadow(0 0 30px #ff6600);
       position: absolute;
-      top: 50%;
+      top: 52%;
       left: 50%;
       transform: translate(-50%, -50%);
       z-index: 2;
       cursor: pointer;
     }
-
     @keyframes fadeInCenter {
-      0% {
-        opacity: 0;
-        transform: translate(-50%, -50%) scale(0.8);
-      }
-      100% {
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1);
-      }
+      0% { opacity: 0; transform: translate(-50%, -50%) scale(0.8); }
+      100% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
     }
-
     .menu-circle {
       position: absolute;
       top: 50%;
@@ -61,37 +56,87 @@
       opacity: 0;
       transition: opacity 1s ease;
     }
-
     .savage-link {
-      position: absolute;
-      pointer-events: auto;
-      opacity: 0;
-      animation: fadeInIcon 1s forwards;
-    }
-
+  position: absolute;
+  pointer-events: auto;
+  opacity: 0;
+  animation: fadeInIcon 1s forwards;
+  animation-delay: inherit;
+  animation-fill-mode: both;
+}
     .savage-icon {
       width: 120px;
       transition: transform 0.4s ease, filter 0.4s ease;
       filter: drop-shadow(0 0 8px #ff6600);
       cursor: pointer;
     }
-
     .savage-icon:hover {
       transform: scale(1.1) rotate(-2deg);
       filter: drop-shadow(0 0 18px #ffaa00);
     }
-
     @keyframes fadeInIcon {
       0% { opacity: 0; transform: scale(0.8); }
       100% { opacity: 1; transform: scale(1); }
     }
+    .mobile-button-bar {
+      display: none;
+    }
+    @media (max-width: 768px) {
+      .menu-circle {
+        display: none !important;
+      }
+      .logo {
+        top: 30%;
+      }
+      .mobile-button-bar {
+        display: flex;
+        justify-content: center;
+        gap: 10px;
+        flex-wrap: nowrap;
+        position: absolute;
+        top: 60%;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 4;
+        overflow-x: auto;
+        padding: 0 10px;
+        width: 100%;
+      }
+      .mobile-button-bar a img {
+        width: 48px;
+        height: 48px;
+        filter: drop-shadow(0 0 6px #ffaa00);
+        transition: transform 0.2s;
+        flex-shrink: 0;
+      }
+      .mobile-button-bar a img:hover {
+        transform: scale(1.1);
+      }
+    }
+    #quienes-somos {
+      display: none;
+      position: fixed;
+      top: 10%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      max-width: 800px;
+      height: 80vh;
+      overflow-y: auto;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.95);
+      border: 1px solid #ff8000;
+      border-radius: 15px;
+      color: #ffe8c3;
+      font-size: 1.1em;
+      z-index: 9999;
+      box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);
+    }
   </style>
 </head>
-<body>
-  <audio id="tribalSound" src="https://cdn.pixabay.com/download/audio/2022/03/15/audio_81640b1d2b.mp3?filename=magic-fire-whoosh-116426.mp3"></audio>
-
+<body onload="showMenu()">
   <div id="particles-js"></div>
-  <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo">
+  <img src="https://i.ibb.co/DfHhsVPY/Chat-GPT-Image-10-may-2025-01-09-47-p-m.png" alt="Logo Savage" class="logo" onclick="showMenu()">
 
   <div class="menu-circle" id="menu-circle">
     <a href="https://discord.gg/7jfYRR2qxc" target="_blank" class="savage-link" style="top: calc(50% - 300px); left: calc(50% - 90px); transform: translate(-50%, -50%); animation-delay: 0.2s;">
@@ -103,9 +148,16 @@
     <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/" target="_blank" class="savage-link" style="top: calc(50% + 200px); left: calc(50% - 80px); transform: translate(-50%, -50%); animation-delay: 0.6s;">
       <img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Ver Guild" class="savage-icon">
     </a>
-    <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;" class="savage-link" style="top: 50%; left: calc(50% - 340px); transform: translate(-50%, -50%); animation-delay: 0.8s;">
+    <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; document.body.style.overflow = 'auto'; } return false;" class="savage-link" style="top: 50%; left: calc(50% - 340px); transform: translate(-50%, -50%); animation-delay: 0.8s;">
       <img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" class="savage-icon">
     </a>
+  </div>
+
+  <div class="mobile-button-bar">
+    <a href="https://discord.gg/7jfYRR2qxc"><img src="https://i.ibb.co/7JWMHmTV/Discord.png" alt="Discord" /></a>
+    <a href="https://guildsofwow.com/savagealliance/recruitment"><img src="https://i.ibb.co/VkJZkb4/Aplicar.png" alt="Aplicar" /></a>
+    <a href="https://worldofwarcraft.blizzard.com/en-us/guild/us/drakkari/savage/"><img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Guild" /></a>
+    <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; document.body.style.overflow = 'auto'; } return false;"><img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" /></a>
   </div>
 
   <div id="quienes-somos" style="display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); width: 90%; max-width: 800px; max-height: 70vh; overflow-y: auto; padding: 20px; background: rgba(0, 0, 0, 0.9); border: 1px solid #ff8000; border-radius: 15px; color: #ffe8c3; font-size: 1.1em; z-index: 9999; box-shadow: 0 0 20px rgba(255, 140, 0, 0.5);">
@@ -150,122 +202,40 @@
       </li>
     </ul>
   </div>
-<script>
-  const menu = document.getElementById('menu-circle');
 
-  function showMenu() {
-    if (!menu) return;
+  <script>
+    function showMenu() {
+      const menu = document.getElementById('menu-circle');
+      if (!menu) return;
 
-    const flash = document.createElement('div');
-    flash.style.position = 'absolute';
-    flash.style.top = '0';
-    flash.style.left = '0';
-    flash.style.width = '100%';
-    flash.style.height = '100%';
-    flash.style.zIndex = '5';
-    flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
-    flash.style.opacity = '0';
-    flash.style.transition = 'opacity 0.4s ease';
-    document.body.appendChild(flash);
+      const flash = document.createElement('div');
+      flash.style.position = 'absolute';
+      flash.style.top = '0';
+      flash.style.left = '0';
+      flash.style.width = '100%';
+      flash.style.height = '100%';
+      flash.style.zIndex = '5';
+      flash.style.background = 'radial-gradient(circle, rgba(255,160,0,0.4) 0%, rgba(0,0,0,0.8) 70%)';
+      flash.style.opacity = '0';
+      flash.style.transition = 'opacity 0.4s ease';
+      document.body.appendChild(flash);
 
-    setTimeout(() => {
-      flash.style.opacity = '1';
       setTimeout(() => {
-        flash.style.opacity = '0';
-        setTimeout(() => document.body.removeChild(flash), 400);
-      }, 300);
-    }, 10);
+        flash.style.opacity = '1';
+        setTimeout(() => {
+          flash.style.opacity = '0';
+          setTimeout(() => document.body.removeChild(flash), 400);
+        }, 300);
+      }, 10);
 
-    menu.style.display = 'block';
-    setTimeout(() => {
-      menu.style.opacity = '1';
-      document.querySelectorAll('.savage-link').forEach(el => {
-        el.style.animationPlayState = 'running';
-      });
-    }, 50);
-  }
-
-  document.querySelectorAll('.savage-icon').forEach(icon => {
-    icon.addEventListener('mouseenter', () => {
-      const sound = document.getElementById('tribalSound');
-      if (sound) {
-        sound.currentTime = 0;
-        sound.play();
-      }
-    });
-  });
-
-  const logo = document.querySelector('.logo');
-  if (logo) logo.addEventListener('click', showMenu);
-
-  setTimeout(() => {
-    if (menu && (getComputedStyle(menu).display === 'none' || getComputedStyle(menu).opacity === '0')) {
-      showMenu();
+      menu.style.display = 'block';
+      setTimeout(() => {
+        menu.style.opacity = '1';
+        document.querySelectorAll('.savage-link').forEach(el => {
+          el.style.animationPlayState = 'running';
+        });
+      }, 50);
     }
-  }, 6000);
-
-  tsParticles.load("particles-js", {
-    particles: {
-      number: { value: 25 },
-      color: { value: "#ffaa00" },
-      shape: {
-        type: "char",
-        character: {
-          value: ["ᚠ", "ᚢ", "ᚦ", "ᚨ", "ᛗ", "ᛉ", "ᛟ"],
-          font: "Verdana",
-          style: "",
-          weight: "400",
-          fill: true
-        }
-      },
-      size: {
-        value: 10,
-        random: true
-      },
-      opacity: {
-        value: 0.4
-      },
-      move: {
-        enable: true,
-        speed: 0.8,
-        direction: "top",
-        outModes: "out"
-      },
-      rotate: {
-        value: { min: 0, max: 360 },
-        animation: {
-          enable: true,
-          speed: 3,
-          sync: false
-        }
-      }
-    },
-    interactivity: {
-      events: {
-        onHover: {
-          enable: true,
-          mode: "trail"
-        },
-        onClick: {
-          enable: false
-        }
-      },
-      modes: {
-        trail: {
-          delay: 0.2,
-          quantity: 1,
-          particles: {
-            color: { value: "#ffaa00" },
-            size: { value: 12 },
-            move: { speed: 0.5 },
-            opacity: { value: 0.6 }
-          }
-        }
-      }
-    },
-    background: { color: "#000" }
-  });
-</script>
+  </script>
 </body>
 </html>
-
