--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <img src="https://i.ibb.co/YFhLdmLC/Chat-GPT-Image-10-may-2025-08-50-40-p-m.png" alt="Ver Guild" class="savage-icon">
   </a>
   <a href="https://www.savageoficial.online" target="_blank" style="--delay: 0.8s">
-    <img src="https://i.ibb.co/Fbbbx1qC/Chat-GPT-Image-18-may-2025-06-01-04-p-m.png" alt="Foro" class="savage-icon">
+    <img src=https://i.ibb.co/WpvVZ7xM/Chat-GPT-Image-19-may-2025-09-27-32-p-m.png" alt="Foro" class="savage-icon">
   </a>
   <a href="#" onclick="const q = document.getElementById('quienes-somos'); if(q) { q.style.display='block'; q.style.opacity='1'; } return false;" style="--delay: 1s">
     <img src="https://i.ibb.co/V4j3MWH/Chat-GPT-Image-10-may-2025-09-31-43-p-m.png" alt="Reglas" class="savage-icon">
